# project-wsi-roi-feature-extraction

./: .gitignore  README.md  pyproject.toml
src/wsi_pipeline/: cli.py
src/wsi_pipeline/adapters/: generic_geojson_v1.py  qupath_geojson.py  sectra_adapter.py
src/wsi_pipeline/core/: dataset.py  deepzoom.py  features.py  project.py  rois.py  slides.py  splits.py  taxonomy.py  tiles.py  tiling_math.py
src/wsi_pipeline/models/: uni.py
src/wsi_pipeline/utils/: common.py
tests/: test_manifest.py  test_roi_geojson.py  test_taxonomy.py  test_tiling_math.py
